@@ -4,6 +4,7 @@
  
  * new WorldObject: building entrance
  * always use JOSM workaround for .osm files with generator='JOSM'
+ * use ele tags on ways and areas for elevation calculation
  
  
 --------------------------------------------------------------------------------
